feature: bound runtime HTTP pools and reduce metric load